--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', sans-serif;
-    background-color: #fef6f9;
+    background-color: #CCFFCC;
     color: #333;
     margin: 0;
     padding: 0;
